--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,11 +1,7 @@
-<html>
-  <head>
-    <title>{{ title }}</title>
-  </head>
-  <body>
+{% extends "base.html" %}
+{% block content %}
     <h1>Hello, {{ user.nickname }} </h1>
     {% for post in posts %}
     <div><p><b>{{ post.author.nickname }} says: </b>{{ post.body }}</p></div>
     {% endfor %}
-  </body>
-</html>
+{% endblock %}
