--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,9 @@
     {% endif %}
   </head>
   <body>
-    <div> DOGEWORLD <a href="/index">Home</a></div>
+    <div> DOGEWORLD <a href="/index">Home</a>
+      <a href="/login">Login</a>
+    </div>
     <hr>
     {% block content %}{% endblock %}
   </body>
