--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,6 +9,7 @@
   <body>
     <div> DOGEWORLD <a href="/index">Home</a>
       <a href="/login">Login</a>
+      <a href="/register">Register</a>
     </div>
     <hr>
     {% with messages = get_flashed_messages() %}
