registering and logging in

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -29,7 +29,7 @@
       <span style="color: red;">[{{ error }}]</span>
     {% endfor %}<br>
   </p>
-  <p><input type="submit" value="Sign In"></p>
+  <p><input type="submit" value="Register"></p>
 </form>
 
 {% endblock %}
