--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,8 @@
   <body>
     <div> DOGEWORLD 
       <a href="/index">Home</a>
-      {% if g.user.is_authenticated %}
+      {% if g.user.is_authenticated() %}
+      |  <a href="{{ url_for('user', name=g.user.name) }}">{{ g.user.name }}</a>
       |  <a href="{{ url_for('logout') }}">Logout</a>
       {% else %}
         <a href="/login">Login</a>
