--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,16 @@
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+
     {% if title %}
     <title>{{ title }}</title>
     {% else %}
@@ -12,6 +23,10 @@
       {% if g.user.is_authenticated() %}
       |  <a href="{{ url_for('user', name=g.user.name) }}">{{ g.user.name }}</a>
       |  <a href="{{ url_for('logout') }}">Logout</a>
+      |
+      {% if g.user and g.user.getRole() == "surveyor" %}
+      |  <a href="{{ url_for('create') }}">Create Survey</a>
+      {% endif %}
       {% else %}
         <a href="/login">Login</a>
         <a href="/register">Register</a>
